# specview

./: README.rst  pycharm_runner.py  setup.cfg  setup.py
docs/: index.rst
docs/specview/: index.rst
licenses/: LICENSE.rst
proto/: califa_convert.py  deep2_convert.py  signal_slot.py  specview_signals.py
proto/model_manager/: README  __init__.py  mm_widget_demo.py  modelmvc.py  models_registry.py  sp_adjust.py  sp_model_manager.py  sp_model_manager_threaded.py  sp_widget.py  test_data.py  units_converter.py
proto/spectraltool-jde/: demo.py  mm_widget_demo.py  modelmvc.py  models_registry.py  setup.py  sp_adjust.py  sp_model_manager.py  sp_model_manager_threaded.py  sp_widget.py  specview_signals.py  units_converter.py
proto/specviewer/: debug.py  demo.py  fit.py  plot_state.py  setup.py  signal_slot.py  spectrum_data.py  spectrum_model.py  spectrum_view.py  spectrum_view.ui  spectrum_view_ui.py  specview.ui  specviewer.py  test.ipynb
specview/: __init__.py  app.py  main.py
specview/analysis/: __init__.py  collapse.py  extract.py  fitting.py  model_fitting.py  smoothing.py  statistics.py
specview/core/: __init__.py  data_objects.py  export.py  history.py  log.py  model.py  signal_factory.py  signal_slot.py
specview/io/: __init__.py  preprocess.py
specview/plugins/: __init__.py  default_ops.py
specview/qt/: __init__.py  menubars.py  pyqt_nonblock.py  subwindows.py  toolbars.py  viewers.py  widgets.py  windows.py
specview/tools/: containers.py  decorate.py  graph_items.py  graphs.py  model_io.py  plugins.py  (+2 more)
test/: build_model_from_file_test.py
(+67 files in other folders)
