[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build

[ah_bootstrap]
auto_use = True

[metadata]
package_name = specview
description = Interactive spectral analysis suite.
long_description = This is a package for doing spectral analysis that relies on astropy
author = Harry Ferguson
author_email = ferguson@stsci.edu
license = AURA
url = https://github.com/spacetelescope/specview
edit_on_github = True
github_project = spacetelescope/specview
